--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ script:
   - remake PYTHON=python3 -j$(nproc) maintainer-all all
   - remake check
   - remake distcheck
-  - if test -e all-macros.texi; then remake web-manual; else echo "missing all-macros.texi!" >&2 && exit 1; fi
+  - if test -e doc/all-macros.texi; then remake web-manual; else echo "missing doc/all-macros.texi!" >&2 && exit 1; fi
   - ./fix-website.sh
