--- a/.github/workflows/autoconf-archive.yml
+++ b/.github/workflows/autoconf-archive.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         fetch-depth: 50000
     - run: sudo apt-get update        
-    - run: sudo apt-get -y install gnulib python3 texlive texinfo tidy
+    - run: sudo apt-get -y install gnulib lzip python3 texlive texinfo tidy
     - run: "./bootstrap.sh"
     - run: "./configure"
     - run: make PYTHON=python3 -j$(nproc) maintainer-all all
