--- a/.github/workflows/autoconf-archive.yml
+++ b/.github/workflows/autoconf-archive.yml
@@ -17,6 +17,6 @@ jobs:
     - run: "./bootstrap.sh"
     - run: "./configure"
     - run: make PYTHON=python3 -j$(nproc) maintainer-all all
-    - run: make distcheck
+    - run: make distcheck AM_DISTCHECK_DVI_TARGET=""
     - run: make web-manual
     - run: "./fix-website.sh"
