--- a/.github/workflows/autoconf-archive.yml
+++ b/.github/workflows/autoconf-archive.yml
@@ -1,23 +1,24 @@
+---
 name: cooljeanius/autoconf-archive
 on:
   push:
     branches:
-    - "**/*"
+      - "**/*"
   pull_request:
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v3.5.0
-      with:
-        fetch-depth: 50000
-    - run: sudo apt-get update        
-    - run: sudo apt-get -y install gnulib lzip python3 texlive texinfo tidy
-    - run: "./bootstrap.sh"
-    - run: "./configure"
-    - run: make PYTHON=python3 -j$(nproc) maintainer-all all
-    - run: make check
-    - run: make distcheck AM_DISTCHECK_DVI_TARGET=""
-    - run: make web-manual
-    - run: "./fix-website.sh"
+      - name: checkout
+        uses: actions/checkout@v3.5.0
+        with:
+          fetch-depth: 50000
+      - run: sudo apt-get update
+      - run: sudo apt-get -y install gnulib lzip python3 texlive texinfo tidy
+      - run: "./bootstrap.sh"
+      - run: "./configure"
+      - run: make PYTHON=python3 -j"$(nproc)" maintainer-all all
+      - run: make check
+      - run: make distcheck AM_DISTCHECK_DVI_TARGET=""
+      - run: make web-manual
+      - run: "./fix-website.sh"
